fixed overflowing tracks

--- a/meditation_flow/home.css
+++ b/meditation_flow/home.css
@@ -102,7 +102,7 @@ body{
 .recording_list_a_9809403065 {
 	
 	grid-row-start:9;
-	/*grid-row-end: span 100;*/
+	grid-row-end: span 100;
 	grid-column-start:3;
 	grid-column-end:8;
 
